# geometricus

./: CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  Moment_Comparison.ipynb  README.md  ShapemerLearn_RADIUS-5_RADIUS-10_KMER-8_KMER-16_68_32_10.pt   geometricus.py  moment_utility.py  protein.py  protein_utility.py  setup.cfg  setup.py  utility.py
docs/: .buildinfo  genindex.html  geometricus.geometricus.rst  geometricus.model_utility.rst  geometricus.moment_invariants.rst  geometricus.moment_utility.rst  geometricus.protein_utility.rst  geometricus.rst  getting_started.html  getting_started.ipynb  index.html  install.html  modules.rst  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html  typing.html
docs/_modules/geometricus/: geometricus.html  moment_utility.html  protein_utility.html
docs/_sources/: getting_started.ipynb.txt  getting_started.rst.txt  index.rst.txt  install.rst.txt
docs/_sources/api/: modules.rst.txt
docs/_static/: documentation_options.js
docs/api/: geometricus.html  modules.html
docs/source/: conf.py  getting_started.ipynb  getting_started.rst  install.rst
docs/source/api/: geometricus.rst
example_data/: MAPK_KLIFS.tsv
geometricus/: __init__.py  database.py  geometricus.py  istarmap.py  model_utility.py  moment_invariants.py  moment_utility.py  protein_utility.py  sampling.py  utility.py
notebooks/: getting_started.ipynb
training/: 1-generate-training-data.ipynb  2-train-shapemerization.ipynb
