[metadata]
name = geometricus
version = 0.5.0
description = Fast, structure-based, alignment-free protein embedding
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/TurtleTools/geometricus
author = Janani Durairaj, Mehmet Akdel
author_email = janani.durairaj@unibas.ch
license = MIT License
license_files = LICENSE
classifiers =
    Intended Audience :: Science/Research
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Bio-Informatics
project_urls =
    Documentation = https://turtletools.github.io/geometricus/
    Source = https://github.com/TurtleTools/geometricus
    Tracker = https://github.com/TurtleTools/geometricus/issues

[options]
zip_safe = False
packages =
    geometricus
platforms = any
include_package_data = True
install_requires =
    numpy==1.23.4
    numba==0.56.3
    scipy
    prody
    typer
    torch
python_requires = >=3.9

[bdist_wheel]
universal = 1
